--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -1,4 +1,4 @@
-name: Generate Datas
+name: Generate Snake
 on:
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
@@ -13,7 +13,7 @@ jobs:
         id: snake-gif
   
         with:
-          github_user_name: eagrundy
+          github_user_name: AjinkyaBhalerao
           svg_out_path: dist/github-contribution-grid-snake.svg
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
